--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -3,9 +3,9 @@
         <div class="col-lg-16 col-md-12">
             <div class="card">
                 <div class="card-header card-header-text" data-background-color="orange">
-                    <h4 class="card-title">Planificación de Metas</h4>
+                    <h4 class="card-title">Ejecución de Metas</h4>
                 </div>
-               
+
                 <div class="card-content table-responsive">
                     <form name="categoryForm">
                         <table class="table table-hover">
@@ -14,7 +14,7 @@
                                     <th rowspan="2">Cualitativo</th>
                                     <th rowspan="2" width="60%">Metas</th>
                                     <th rowspan="2"> </th>
-                                    <th colspan="4">Programación Trimestral en % de la meta</th>
+                                    <th colspan="4">Ejecución Trimestral en % de la meta</th>
                                     <th rowspan="2">Presupuesto</th>
                                     <th rowspan="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                 </tr>
@@ -22,15 +22,15 @@
                                     <th class="text-center" ng-repeat="intervalo in vm.listadoIntervalos">{{intervalo.descripcion}}</th>
                                 </tr>
                             </thead>
-                          
+
                             <tbody>
                                 <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                    <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true"/></td>
-                                    <td style="font-size:13px;" >{{Programacion.Metas}}</td>
+                                    <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true" /></td>
+                                    <td style="font-size:13px;">{{Programacion.Metas}}</td>
                                     <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.I" numbers-only max=""/>
+                                            <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
@@ -50,26 +50,26 @@
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
                                         <div class="ui input">
-                                            <input size="10" type="text" ng-model="Programacion.Presupuesto" decimal-only format="currency"/>
+                                            <input size="10" type="text" ng-model="Programacion.Presupuesto" decimal-only format="currency" />
                                         </div>
                                     </td>
-                                    <td class="td-actions text-center" >
+                                    <td class="td-actions text-center">
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasProgramacion(Programacion)" class="btn btn-success btn-round">
                                             <i class="material-icons">cached</i>
                                         </button>
                                     </td>
                                 </tr>
                                 <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
-                                   <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
-                                          <input type="checkbox" ng-model="checked" ng-init="checked=false" />
-                                    </td>-->
+                                    <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
+                                           <input type="checkbox" ng-model="checked" ng-init="checked=false" />
+                                     </td>-->
                                     <!--<td ng-if="Programacion.I != '110' || Programacion.I != '220' || Programacion.I != '330'">
                                         <input type="checkbox" ng-model="checked1" ng-init="checked=true" />
                                     </td>-->
                                     <td>
-                                        <input type="checkbox" ng-model="checked" ng-init="checked=true"  />
+                                        <input type="checkbox" ng-model="checked" ng-init="checked=true" />
                                     </td>
-                                  
+
                                     <td style="font-size:13px;">{{Programacion.Metas}}</td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
@@ -77,7 +77,7 @@
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
-                                        <select ng-model="Programacion.I" >
+                                        <select ng-model="Programacion.I">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
