--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -24,42 +24,42 @@
                             </thead>
 
                             <tbody>
-                                <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr style="font-size:12px;" ng-if="vm.deparmentID!=8" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
                                     <td class="text-center"><input type="checkbox" ng-model="checked" ng-init="checked=true" ng-disabled="true" /></td>
-                                    <td style="font-size:13px;">{{Programacion.Metas}}</td>
-                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Programacion.MetaID)" class="text-success">ver más</span></td>
+                                    <td style="font-size:13px;">{{Ejecucion.Metas}}</td>
+                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
                                         <div class="ui input">
-                                            <input size="10" type="text" ng-model="Programacion.Presupuesto" decimal-only format="currency" />
+                                            <input size="10" type="text" ng-model="Ejecucion.P_Ejecutado" decimal-only format="currency" />
                                         </div>
                                     </td>
                                     <td class="td-actions text-center">
-                                        <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasProgramacion(Programacion)" class="btn btn-success btn-round">
+                                        <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
                                             <i class="material-icons">cached</i>
                                         </button>
                                     </td>
                                 </tr>
-                                <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Programacion in vm.listadoMetasProgramaciones">
+                                <tr style="font-size:12px;" ng-if="vm.deparmentID==8" class="animate-if" ng-repeat="Ejecucion in vm.listadoMetasEjecucion">
                                     <!--<td ng-if="Programacion.I == '110' || Programacion.I == '220' || Programacion.I == '330'">
                                            <input type="checkbox" ng-model="checked" ng-init="checked=false" />
                                      </td>-->
@@ -70,14 +70,15 @@
                                         <input type="checkbox" ng-model="checked" ng-init="checked=true" />
                                     </td>
 
-                                    <td style="font-size:13px;">{{Programacion.Metas}}</td>
+                                    <td style="font-size:13px;">{{Ejecucion.Metas}}</td>
+                                    <td style="font-size:12px;"><span data-toggle="modal" data-target="#myModalDetalleMeta" style="cursor:pointer;" ng-click="vm.detalleMeta(Ejecucion.MetaID)" class="text-success">ver más</span></td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.I" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
-                                        <select ng-model="Programacion.I">
+                                        <select ng-model="Ejecucion.I">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
@@ -85,11 +86,11 @@
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.II" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
-                                        <select ng-model="Programacion.II">
+                                        <select ng-model="Ejecucion.II">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
@@ -97,11 +98,11 @@
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.III" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
-                                        <select ng-model="Programacion.III">
+                                        <select ng-model="Ejecucion.III">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
@@ -109,18 +110,18 @@
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Programacion.IV" numbers-only max="" />
+                                            <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" />
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
-                                        <select ng-model="Programacion.IV">
+                                        <select ng-model="Ejecucion.IV">
                                             <option value="110">Satisfactorio</option>
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
                                     </td>
                                     <td class="td-actions text-center">
-                                        <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasProgramacion(Programacion)" class="btn btn-success btn-round">
+                                        <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
                                             <i class="material-icons">cached</i>
                                         </button>
                                     </td>
