--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -55,7 +55,7 @@
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
-                                        <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.addObservacion()" class="text-success">Añadir</span>
+                                        <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.ObservacionDetalle(Ejecucion.MetaID)" class="text-success">Añadir</span>
                                     </td>
                                     <td class="td-actions text-center">
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
@@ -196,19 +196,18 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title text-success">:: Actualizar Observación ::</h4>
                 </div>
-                <form name="updateObservacionForm" class="ui form" ng-submit="vm.updateIndicador()" novalidate>
+                <form name="updateObservacionForm" class="ui form" ng-submit="vm.updateObservacion()" novalidate>
                     <div class="modal-body">
                         <div class="form-group label-floating">
-                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{vm.estrategia | uppercase}}</label>
+                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{vm.observacion.Descripcion | uppercase}}</label>
                         </div>
                         <br />
                         <div class="form-group label-floating">
                             <label class="control-label" style="font-size:12px;">OBSERVACIÓN DE LA META</label>
                             <div class="form-group">
-                                <textarea type="text" class="form-control" ng-model="vm.observacion" required></textarea>
+                                <textarea type="text" class="form-control" ng-model="vm.observacion.Observacion" required></textarea>
                             </div>
                         </div>
-                       <!-- <input type="hidden" ng-model="vm.modalIndicadores.IndicadorId" ng-value="vm.modalIndicadores.IndicadorId">-->
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateObservacionForm.$invalid">Actualizar <i class="refresh icon"></i></button>
