--- a/GestionPOA/App/Views/metas/ejecucion.html
+++ b/GestionPOA/App/Views/metas/ejecucion.html
@@ -32,25 +32,25 @@
                                     <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID)">unarchive</i>
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia">unarchive</i>
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia"  data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia">unarchive</i>
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center">
                                         <div class="ui input">
-                                            <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" />
-                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia">unarchive</i>
+                                            <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max=""/>
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal"  data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center" style="font-size:12px;">
@@ -83,6 +83,7 @@
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.I" numbers-only max="" />
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
@@ -91,10 +92,12 @@
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
+                                        <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_I)">unarchive</i>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.II" numbers-only max="" />
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
@@ -103,10 +106,12 @@
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
+                                        <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_II)">unarchive</i>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.III" numbers-only max="" />
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
@@ -115,10 +120,12 @@
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
+                                        <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_III)">unarchive</i>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==true">
                                         <div class="ui input">
                                             <input size="2" type="text" ng-model="Ejecucion.IV" numbers-only max="" />
+                                            <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
                                         </div>
                                     </td>
                                     <td class="text-center animate-if" ng-if="checked==false">
@@ -127,6 +134,10 @@
                                             <option value="220">Medio Satisfactorio</option>
                                             <option value="330">Deficiente</option>
                                         </select>
+                                        <i class="uploadIcon material-icons" rel="tooltip" title="Cargar Evidencia" data-toggle="modal" data-target="#myModalupload" ng-click="vm.EvidenciaUpload(Ejecucion.MetaID,Ejecucion.Metas,Ejecucion.ID_IV)">unarchive</i>
+                                    </td>
+                                    <td class="text-center" style="font-size:12px;">
+                                        <span data-toggle="modal" rel="tooltip" title="Agregar Observación" data-target="#myModalAddObservacion" style="cursor:pointer;" ng-click="vm.ObservacionDetalle(Ejecucion.MetaID)" class="text-success">Añadir</span>
                                     </td>
                                     <td class="td-actions text-center">
                                         <button type="submit" rel="tooltip" title="Actualizar" ng-click="vm.updateMetasEjecucion(Ejecucion)" class="btn btn-success btn-round">
@@ -231,21 +242,16 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title text-success">:: Subir Evidencia ::</h4>
                 </div>
-                <form name="updateObservacionForm" class="ui form" ng-submit="vm.addEvidencia()" novalidate>
+                <form name="upload" ng-submit="vm.uploadFile()"  class="ui form" novalidate >
                     <div class="modal-body">
-                        <div class="form-group label-floating">
-                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{vm.observacion.Descripcion | uppercase}}</label>
+                        <div class="form-group">
+                            <label class="control-label"><span class="text-success"><b>META: </b> </span> {{ vm.uploadfile.meta | uppercase}}</label>
                         </div>
-                        <br />
-                        <div class="form-group label-floating">
-                            <label class="control-label" style="font-size:12px;">SUBIR EVIDENCIA</label>
-                            <div class="form-group">
-                                <input type="file" class="form-control" ng-model="vm.Evidencia.name" required></input>
-                            </div>
-                        </div>
+                        <label class="control-label" style="font-size:12px;">SUBIR EVIDENCIA</label>
+                        <input type="file" id="file"  ng-model="vm.uploadfile.files" luploader-model="file" />
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="updateObservacionForm.$invalid">Actualizar <i class="refresh icon"></i></button>
+                        <button type="submit" class="btn btn-fill btn-success" ng-disabled="upload.$invalid">Actualizar <i class="refresh icon"></i></button>
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close <i class="remove icon"></i></button>
                     </div>
                 </form>
